force-app/main/default/objects/ssot__ConversationEntryTranscriptExcerpt__dlm/fields/ssot__ConversationReasonId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ConversationReasonId__c</fullName>
    <label>Conversation Reason</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ConversationReasonId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>