force-app/main/default/objects/ssot__ConversationEntryTranscriptExcerpt__dlm/fields/ssot__DurationInSeconds__c.field-meta.xml
<CustomField>
    <fullName>ssot__DurationInSeconds__c</fullName>
    <label>Duration In Seconds</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DurationInSeconds</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>