force-app/main/default/objects/ssot__ConversationEntryTranscriptExcerpt__dlm/fields/ssot__ExcerptSequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExcerptSequenceNumber__c</fullName>
    <label>Excerpt Sequence Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExcerptSequenceNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>