force-app/main/default/objects/ssot__ConversationEntryTranscriptExcerpt__dlm/fields/ssot__rel_1702009487088_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1702009487088_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ConversationEntryTranscriptExcerpt_E_rel</label>
    <referenceTo>ssot__EmailMessage__dlm</referenceTo>
    <relationshipLabel>ConversationEntryTranscriptExcerpt_E_rel</relationshipLabel>
    <relationshipName>rel_1702009487088_end</relationshipName>
    <type>Lookup</type>
</CustomField>